--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,11 @@ classifiers = [
 dependencies = [
     "onnx",
     "onnxruntime",
+    "torch",
+    "transformers",
     "numpy",
     "pyopenjtalk",
+    "pypinyin",
     "soundfile",
     "soxr",
     "pyyaml",
